Bug 416296 - Important functions for the processing of planned posting lies outside the visible area
Summary: Important functions for the processing of planned posting lies outside the vi...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.8.4
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-15 13:10 UTC by Ralf Habacker
Modified: 2020-01-22 09:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.5
Sentry Crash Report:


Attachments
Screenshot showing ledger in case a scheduled transaction is selected (77.65 KB, image/png)
2020-01-15 13:10 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2020-01-15 13:10:25 UTC
Created attachment 125151 [details]
Screenshot showing ledger in case a scheduled transaction is selected

In the toolbar of the general ledger view, suitable functions are displayed when selecting a scheduled transaction. Unfortunately, the most common functions for entering or skipping the planned booking are outside the visible area on smaller screens and require an additional action (click on '>>') to be executed. The functions should therefore be sorted so that the functions mentioned are listed first.

STEPS TO REPRODUCE
1. start kmymoney
2. open a kmymoney file with a scheduled transaction or create one
3. open ledger view and select a scheduled transaction
4. reduce screen size

OBSERVED RESULT
The most common functions for entering or skipping the planned booking are outside the visible area

EXPECTED RESULT
The mentioned functions should be listed first

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: openSUSE Leap 15.1
KDE Frameworks Version: 5.49
Qt Version: 5.9.7
Comment 1 Ralf Habacker 2020-01-22 09:39:28 UTC
Git commit 0868f8f0523896d2800d317d2016352545a81f4a by Ralf Habacker.
Committed on 15/01/2020 at 13:14.
Pushed by habacker into branch '4.8'.

Fix 'Important functions for the processing of planned posting lies outside the visible area'

The order of the toolbar entries in ledger view for processing scheduled transactions are now
'enter', 'skip', 'edit', 'new', 'delete', 'duplicate'.
FIXED-IN:4.8.5

M  +3    -3    kmymoney/views/kgloballedgerview.cpp

https://commits.kde.org/kmymoney/0868f8f0523896d2800d317d2016352545a81f4a