Fix 'Important functions for the processing of planned posting lies outside the visible area'

The order of the toolbar entries in ledger view for processing scheduled transactions are now
'enter', 'skip', 'edit', 'new', 'delete', 'duplicate'.

BUG:416296
FIXED-IN:4.8.5